[package]
name = "graph-viz"
version = "0.1.0"
authors = ["lokmeinmatz <matze.kind@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5"
cgmath = {version = "0.17.0", features = ["mint"]}
itertools = "0.9.0"
async-std = "1.5.0"